Use stream.toList()