@@ -31,7 +31,7 @@ public class AutoCompleteTextField extends TextField
     private final AutocompleteEntrySupplier autocompleteEntriesSupplier;
     private final ContextMenu entriesPopup;
 
-    public AutoCompleteTextField(AutocompleteEntrySupplier autocompleteEntriesSupplier)
+    public AutoCompleteTextField(final AutocompleteEntrySupplier autocompleteEntriesSupplier)
     {
         this.autocompleteEntriesSupplier = autocompleteEntriesSupplier;
         entriesPopup = new ContextMenu();
@@ -68,11 +68,11 @@ public class AutoCompleteTextField extends TextField
         entriesPopup.getSkin().getNode().requestFocus();
     }
 
-    private void populatePopup(List<AutocompleteProposal> searchResult)
+    private void populatePopup(final List<AutocompleteProposal> searchResult)
     {
         final List<MenuItem> menuItems = searchResult.stream()
                 .map(this::createMenuItem)
-                .collect(toList());
+                .toList();
         entriesPopup.getItems().setAll(menuItems);
     }
 
